--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 body {
     max-width: 1000px;
 }
@@ -10,11 +17,40 @@ h1 {
     text-align: center;
     border: 2px solid black;
     padding: 20px;
-    background-color: rgba(255, 81, 0, 0.288);
+    background-color: rgba(255, 51, 51, 0.5);
+    
     color: black;
     margin-bottom: 20px;
 }
 
-ul li {
-    text-align: left;
+.card {
+    width: 800px;
+    background: rgba(0, 0, 0, 0.1);
+    margin: 20px 10px;
+    padding: 10px 20px;
+    border: 2px solid black;
 }
+
+.recipe-card {
+    box-sizing: border-box;
+    width: 800px;
+    height: auto;
+    list-style-type: none;
+    border: 2px solid black;
+    text-align: left;
+    padding: 20px;
+    margin-top: 20px;
+    margin-left: -40px;
+    background: #88acff7e;
+}
+
+.list-card {
+    box-sizing: border-box;
+    width: 800px;
+    height: auto;
+    padding: 10px;
+    margin: 10px 0px;
+    border: 2px solid black;
+    background: #88acff7e;
+}
+
